membuat tampilan website input-book

--- a/index.html
+++ b/index.html
@@ -5,11 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookshelf Apps</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
-    <script>
-        
-    </script>
+    <main>
+        <div class="content">
+            <article class="input-book">
+                <div class="input-img-content">
+                    <h1>Bookshelf Apps</h1>
+                </div>
+                <section class="input-section">
+                    <form class="add-book" id="add-book">
+                        <h2>Masukan Buku Baru</h2>
+
+                        <label for="judul">JUDUL</label>
+                        <input type="text" id="judul">
+                        <label for="judul">PENULIS</label>
+                        <input type="text" id="judul">
+                        <label for="judul">TAHUN</label>
+                        <input type="text" id="judul">
+                    </form>
+                </section>
+            </article>
+        </div>
+    </main>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
