Menambah tag button dan checkbox

--- a/index.html
+++ b/index.html
@@ -23,16 +23,31 @@
                 </div>
                 <section class="input-section">
                     <form class="add-book" id="add-book">
-                        <h2>Masukan Buku Baru</h2>
+                        <h2 class="text-shadow">Masukan Buku Baru</h2>
 
-                        <label for="judul">JUDUL</label>
-                        <input type="text" id="judul">
-                        <label for="judul">PENULIS</label>
-                        <input type="text" id="judul">
-                        <label for="judul">TAHUN</label>
-                        <input type="text" id="judul">
+                        <label for="judul" class="mb-10 text-shadow">Judul</label>
+                        <input type="text" id="judul" class="input">
+                        <label for="penulis" class="mb-10 text-shadow">Penulis</label>
+                        <input type="text" id="penulis" class="input">
+                        <label for="tahun" class="mb-10 text-shadow">Tahun</label>
+                        <input type="number" id="tahun" class="input mb-20">
+
+                        <div class="container-input">
+                            <div class="checkbox-container">
+                                <label for="selesai-dibaca" class="text-shadow">Selesai dibaca</label>
+                                <input type="checkbox" id="selesai-dibaca" class="selesai-dibaca">
+                            </div>
+                            <div class="btn-container">
+                                <button type="submit" class="btn submit">SUBMIT</button>
+                                <button type="reset" class="btn reset">RESET</button>
+                            </div>
+                        </div>
                     </form>
                 </section>
+
+                <article>
+                    
+                </article>
             </article>
         </div>
     </main>
