mengubah sedikit css dan menambah sedikit js

--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
                 </section>
 
                 <article>
-                    
+
                 </article>
             </article>
         </div>
     </main>
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/storage.js"></script>
 </body>
 </html>
