--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <div class="container">
           <h2 class="text-shadow">Cari Buku</h2>
 
-          <form class="search-book" id="search-book">
+          <div class="search-book" id="search-book">
             <input type="search" id="keyword" placeholder="Search Judul.." class="keyword" />
-            <button type="submit" class="search"><i class="bi bi-search"></i></button>
-          </form>
+            <button type="submit" class="search" id="search"><i class="bi bi-search"></i></button>
+          </div>
         </div>
       </article>
       <article class="container-books">
