--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshelf Apps</title>
+    <!-- My CSS -->
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/confirm.css" />
     <!-- CSS Reset -->
     <link rel="stylesheet" href="assets/css/reset.css" />
     <!-- Icon -->
@@ -65,6 +67,20 @@
           <div class="list-item" id="completed-books"></div>
         </div>
       </article>
+    </div>
+
+    <div class="confirm" id="confirm">
+      <div class="container">
+        <div class="exit">
+          <div class="brand">Bookshelf Apps</div>
+          <i class="bi bi-x-circle" id="exit"></i>
+        </div>
+        <div class="title">Apakah anda yakin?</div>
+        <div class="btn-container">
+          <button class="btnYes" id="btnYes">Yes</button>
+          <button class="btnNo" id="btnNo">No</button>
+        </div>
+      </div>
     </div>
 
     <script src="assets/js/main.js"></script>
