memperbaiki bug pada fitur dialog-hapus

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <div class="content">
+    <div id="content">
       <article class="container-input" id="container-input">
         <div class="input-img-content">
           <h1>Bookshelf Apps</h1>
@@ -67,20 +67,6 @@
           <div class="list-item" id="completed-books"></div>
         </div>
       </article>
-    </div>
-
-    <div class="confirm" id="confirm">
-      <div class="container">
-        <div class="exit">
-          <div class="brand">Bookshelf Apps</div>
-          <i class="bi bi-x-circle" id="exit"></i>
-        </div>
-        <div class="title">Apakah anda yakin?</div>
-        <div class="btn-container">
-          <button class="btnYes" id="btnYes">Yes</button>
-          <button class="btnNo" id="btnNo">No</button>
-        </div>
-      </div>
     </div>
 
     <script src="assets/js/main.js"></script>
