perbaiki index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="container">
               <div class="checkbox-container">
-                <label for="selesai-dibaca" class="text-shadow">Selesai dibaca</label>
+                <label for="check-selesai-dibaca" class="text-shadow">Selesai dibaca</label>
                 <input type="checkbox" id="check-selesai-dibaca" class="selesai-dibaca" />
               </div>
               <div class="btn-container">
